k8s-aws/networkpolicy/ai-integration/ai-ingress-self.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ai-ingress-self
  namespace: bravo-ai-integration-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: bravo-ai-integration-ns
